user service tests made. 100% coverage